// When the next release happens, nest these changes under the "Python Agent version 5.x" heading
//[float]
//===== Features
//
//
//[float]
//===== Bug fixes
//

=== Unreleased

// Unreleased changes go here
// When the next release happens, nest these changes under the "Python Agent version 5.x" heading
[float]
===== Features

* Added graphql (graphene) support {pull}850[#850]

[float]
===== Bug fixes

* Fix header fetching for ASGI implementations {pull}856[#856]


[[release-notes-5.x]]
=== Python Agent version 5.x

[[release-notes-5.7.0]]
==== v5.7.0

[float]
===== Features

 * capture number of affected rows for INSERT/UPDATE/DELETE SQL queries {pull}614[#614]
 * Added instrumentation for AsyncElasticsearch {pull}843[#843]

[float]
===== Bug fixes

* Added error handling around frame processing in Django {pull}837[#837]
* Limit SQL queries in context data to 10000 characters {pull}842[#842]
* Omit the "sync" property on spans by default {pull}854[#854]
* Update the pid/ppid in transport metadata when they change {pull}825[#825]
* Added better error handling around closing the transport {pull}838[#838]
* Fixed an issue with the django admin command not detecting misconfigured server urls {pull}855[#855]


[[release-notes-5.6.0]]
==== v5.6.0

[float]
===== New features
 * Added SERVICE_NODE_NAME config {pull}592[#592]
 * Added instrumentation support for https://github.com/pinterest/pymemcache[`pymemcache`] {pull}812[#812]
 * Added new configuration options `enabled` and `recording` {pull}790[#790]

[float]
===== Bug fixes
 * Fixed an issue with metrics collection raising RuntimeErrors {pull}802[#802]
 * Fixed an issue with getting extended destination data from pymongo {pull}797[#797]
 * Fixed an issue with Tornado instrumentation when Tornado isn't the "main" framework {pull}813[#813]
 * Fixed an issue with streaming requests being consumed by the agent even if capture_body is disabled {pull}817[#817]

[float]
===== Pending Deprecations
