@@ -790,15 +790,12 @@ def test_python_version_deprecation(mock_python_version_tuple, version, raises, 
         if e:
             e.close()
     if raises:
-        assert len(recwarn) == 1
         if pending:
             w = recwarn.pop(PendingDeprecationWarning)
             assert "will stop supporting" in w.message.args[0]
         else:
             w = recwarn.pop(DeprecationWarning)
             assert "agent only supports" in w.message.args[0]
-    else:
-        assert len(recwarn) == 0
 
 
 def test_recording(elasticapm_client):
